--- a/zeta/zeta.cabal
+++ b/zeta/zeta.cabal
@@ -1,4 +1,4 @@
-cabal-version:      2.4
+cabal-version:      3.6
 name:               zeta
 version:            0.1.0.0
 
@@ -21,14 +21,31 @@ maintainer:         amittaijoel@outlook.com
 -- category:
 extra-source-files: CHANGELOG.md
 
+library MyData
+  hs-source-dirs: src
+  default-language: Haskell2010
+  build-depends:
+    base >= 4.8,
+    bytestring >= 0.11.1,
+    text >= 1.2.1,
+    http-conduit >= 2.3.8,
+    tagsoup >= 0.14.8,
+    utf8-string >= 1.0.2
+
 executable zeta
-    main-is:          Main.hs
+  main-is:          Main.hs
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+  -- Modules included in this executable, other than Main.
+  -- other-modules:
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   app
-    default-language: Haskell2010
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:
+  build-depends:    
+    -- base >=4.14.3.0,
+    base >= 4.12.0,
+    bytestring >= 0.11.1,
+    http-conduit >= 2.3.8,
+    tagsoup >= 0.14.8,
+    utf8-string >= 1.0.2
+  hs-source-dirs:   app, src
+  default-language: Haskell2010
