--- a/zeta/zeta.cabal
+++ b/zeta/zeta.cabal
@@ -28,9 +28,12 @@ library MyData
     base >= 4.8,
     bytestring >= 0.11.1,
     text >= 1.2.1,
+    HTTP,
+    hxt,
     http-conduit >= 2.3.8,
     tagsoup >= 0.14.8,
     utf8-string >= 1.0.2
+  other-modules: MyData.Trie, MyData.Parser
 
 executable zeta
   main-is:          Main.hs
@@ -44,8 +47,12 @@ executable zeta
     -- base >=4.14.3.0,
     base >= 4.12.0,
     bytestring >= 0.11.1,
+    HTTP,
+    hxt,
     http-conduit >= 2.3.8,
     tagsoup >= 0.14.8,
     utf8-string >= 1.0.2
+
+  other-modules:    MyData, MyData.Parser, MyData.Trie
   hs-source-dirs:   app, src
   default-language: Haskell2010
