Need to fix date persing

--- a/zeta/zeta.cabal
+++ b/zeta/zeta.cabal
@@ -3,16 +3,16 @@ name:               zeta
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
--- synopsis:
+-- synopsis: Zeta bc we love the Greek alphabet.
 
 -- A longer description of the package.
--- description:
+-- description: A functional HTML parser /// scraper /// etc.
 
 -- A URL where users can report bugs.
--- bug-reports:
+-- bug-reports: Just email me lmao
 
 -- The license under which the package is released.
--- license:
+-- license: MIT
 author:             siavava
 maintainer:         amittaijoel@outlook.com
 
