--- a/zeta/zeta.cabal
+++ b/zeta/zeta.cabal
@@ -54,7 +54,9 @@ executable zeta
     tagsoup >= 0.14.8,
     utf8-string >= 1.0.2,
     containers,
-    http-client
+    http-client,
+    random,
+    array
   other-modules:    MyData, MyData.Parser, MyData.Trie
   hs-source-dirs:   app, src
   default-language: Haskell2010
