--- a/zeta/zeta.cabal
+++ b/zeta/zeta.cabal
@@ -24,6 +24,7 @@ extra-source-files: CHANGELOG.md
 library MyData
   hs-source-dirs: src
   default-language: Haskell2010
+  exposed-modules: MyData, MyData.Trie, MyData.Parser
   build-depends:
     base >= 4.8,
     bytestring >= 0.11.1,
@@ -34,7 +35,7 @@ library MyData
     utf8-string >= 1.0.2,
     containers,
     http-client
-  other-modules: MyData.Trie, MyData.Parser
+  -- other-modules: MyData.Trie, MyData.Parser
 
 executable zeta
   main-is:          Main.hs
