--- a/crypt/ciphers/ciphers.cabal
+++ b/crypt/ciphers/ciphers.cabal
@@ -25,7 +25,7 @@ library Ciphers
     Ciphers.SubstitutionCipher
     Ciphers.AbstractAlgebra
   hs-source-dirs:      src
-  build-depends:       base >=4.16.0.0, random
+  build-depends:       base >=4.16.0.0, random, integer-roots
   default-language:    Haskell2010
 
 
@@ -39,7 +39,7 @@ executable ciphers
     Ciphers.RSA
     Ciphers.SubstitutionCipher
     Ciphers.AbstractAlgebra
-  build-depends:       base >=4.16.0.0
+  build-depends:       base >=4.16.0.0, random, integer-roots
   hs-source-dirs:      app, src
   default-language:    Haskell2010
 
