--- a/algebra/algebra.cabal
+++ b/algebra/algebra.cabal
@@ -29,7 +29,8 @@ executable algebra
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.1.0
+    build-depends:
+        base ^>=4.16.1.0
     hs-source-dirs:   app
     default-language: Haskell2010
 
@@ -37,7 +38,9 @@ library Algebra
     exposed-modules:
         Algebra,
         Algebra.Group
-    build-depends:     base ^>=4.16.1.0
+    build-depends:
+        base ^>=4.16.1.0
+      , containers
     default-language:  Haskell2010
     hs-source-dirs:    src
 
